[package]
name = "mela"
version = "0.2.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
futures =  { version = "0.3", features = ["executor"] }
image = "0.23"
itertools = "0.9"
imgui = "0.7"
imgui-winit-support = { version = "0.7", features = ["winit-25"], default-features = false }
imgui-wgpu = "0.16"
nalgebra = { version = "0.28", features = ["serde-serialize"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.25"
wgpu = "0.9"
lyon = "0.17"
bytemuck = "1.7"
legion = "0.4"
eyre = "0.6"

[[example]]
name="helloworld"
path="examples/helloworld/main.rs"